<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_registro"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"

android:orientation="vertical"
tools:context="com.example.juanes.doradalturistico.RegistroActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="10dp"
    android:textAlignment="center"
    android:textSize="28sp"
    android:textColor="@color/red"
    android:text="@string/create_account"

    />

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/rioclaro"
    android:layout_gravity="center"
    />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2sp"
    android:layout_marginBottom="2sp"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:hint="@string/username"
    android:id="@+id/eTRegisterUsername"
    />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2sp"
    android:layout_marginBottom="2sp"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:inputType="textPassword"
    android:hint="@string/password"
    android:id="@+id/eTRegisterPassword1"
    />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2sp"
    android:layout_marginBottom="2sp"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:inputType="textPassword"
    android:hint="@string/password_repeat"
    android:id="@+id/eTRegisterPassword2"
    />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2sp"
    android:layout_marginBottom="2sp"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:inputType="textEmailAddress"
    android:hint="@string/email"
    android:id="@+id/eTRegisterEmail"
    />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="2sp"
        android:layout_marginBottom="2sp"
        android:layout_gravity="center"
        android:text="@string/cancel"
        android:id="@+id/bRegisterCancel"
        />

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="2sp"
        android:layout_marginBottom="2sp"
        android:layout_gravity="center"
        android:text="@string/REGISTRO"
        android:id="@+id/bRegisterStart"
        />


</LinearLayout>


</LinearLayout>
