<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_login"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="com.example.juanes.doradalturistico.LoginActivity">


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="10dp"
    android:textAlignment="center"
    android:textSize="28sp"
    android:textColor="@color/white"
    android:text="Doradal"

    />

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/rioclaro"
    android:layout_gravity="center"
    />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5sp"
    android:layout_marginBottom="5sp"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:hint="@string/username"
    android:textColorHint="@color/white"
    android:textColor="@color/white"
    android:id="@+id/eTLoginUsername"
    />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5sp"
    android:layout_marginBottom="5sp"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:hint="@string/password"
    android:textColorHint="@color/white"
    android:textColor="@color/white"
    android:inputType="textPassword"
    android:id="@+id/eTLoginPassword"
    />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5sp"
    android:layout_marginBottom="30sp"
    android:layout_gravity="center"
    android:text="@string/login"
    android:id="@+id/bLogin"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="5sp"
    android:layout_marginBottom="5sp"
    android:text="@string/register"
    android:textColor="@color/white"
    android:id="@+id/tViewRegister"
    />

</LinearLayout>
